fix overflow [skip ci pytest]

--- a/frontend/src/component/PublicProfile/ProfileMainBar.styl
+++ b/frontend/src/component/PublicProfile/ProfileMainBar.styl
@@ -2,16 +2,16 @@
 
 .profile__mainBar__info
   &__wrapper
-    max-width 90%
+    width 90%
   &__user
+    overflow hidden
+    text-overflow ellipsis
     &__name
       overflow hidden
       text-overflow ellipsis
     &__username
       overflow hidden
       text-overflow ellipsis
-      &__wrapper
-        display flex
 
 @media (max-width: max-xs)
   .profile__mainBar__info__wrapper
